# SoulBypass

./: QUICKSTART.md  README.md  build.sh  customize.sh  module.prop
module/src/main/cpp/: CMakeLists.txt
module/src/main/cpp/include/: dlopen_hook.h  dobby.h  memfd_faker.h  pc_cache.h  seccomp_filter.h
module/src/main/cpp/libs/: README.md
module/src/main/cpp/src/: dlopen_hook.cpp  main.cpp  memfd_faker.cpp  pc_cache.cpp  seccomp_filter.cpp
module/src/main/cpp/zygisk/: zygisk.h
zygisk/: README.md
